@@ -8,13 +8,16 @@
 #include <x/exception.H>
 #include <x/destroy_callback.H>
 #include <x/pidinfo.H>
+#include <x/config.H>
 #include <x/w/main_window.H>
 #include <x/w/gridlayoutmanager.H>
 #include <x/w/label.H>
 #include <x/w/uielements.H>
 #include <x/w/uigenerators.H>
 #include <x/w/text_param_literals.H>
+#include <x/w/font_picker.H>
 #include <x/w/progressbar.H>
+#include <x/w/screen_positions.H>
 #include <string>
 #include <iostream>
 #include <sstream>
@@ -24,7 +27,8 @@
 #include "close_flag.H"
 
 
-static inline auto create_main_window(const x::w::main_window &main_window)
+static inline auto create_main_window(const x::w::main_window &main_window,
+				      const x::w::screen_positions &pos)
 {
 	std::string me=x::exename(); // My path.
 	size_t p=me.rfind('/');
@@ -33,7 +37,7 @@ static inline auto create_main_window(const x::w::main_window &main_window)
 
 	x::w::const_uigenerators generator=
 		x::w::const_uigenerators::create(me.substr(0, ++p) +
-						 "uigenerator2.xml");
+						 "uigenerator2.xml", pos);
 
 	x::w::uielements element_factory;
 
@@ -41,6 +45,48 @@ static inline auto create_main_window(const x::w::main_window &main_window)
 
 	layout->generate("main-window-grid",
 			 generator, element_factory);
+
+	// Retrieve the generated font picker widget.
+	//
+	// Install a bare font selection callback that updates the font
+	// picker's most-recently-used fonts to the last three selected
+	// fonts.
+
+	x::w::font_picker fp=element_factory.get_element("default-font");
+
+	fp->on_font_update
+		([]
+		 (ONLY IN_THREAD,
+		  const x::w::font &new_font,
+		  const x::w::font_picker_group_id *new_font_group,
+		  const x::w::font_picker &myself,
+		  const x::w::callback_trigger_t &trigger,
+		  const x::w::busy &mcguffin)
+		{
+			if (!new_font_group)
+				return;
+
+			auto mru=myself->most_recently_used();
+
+			std::vector<x::w::font_picker_group_id> new_list;
+
+			new_list.reserve(3);
+
+			new_list.push_back(*new_font_group);
+
+			for (const auto &existing:mru)
+			{
+				if (existing == *new_font_group)
+					continue;
+
+				new_list.push_back(existing);
+
+				if (new_list.size() >= 3)
+					break;
+			}
+
+			myself->most_recently_used(IN_THREAD, new_list);
+		});
 
 	// generate() saved the id-ed widgets that were created. Fish out
 	// the progressbar widget and its label widget, and return them.
@@ -55,17 +101,30 @@ void uigenerator2()
 {
 	x::destroy_callback::base::guard guard;
 
+	// Configuration filename where we save the window's position.
+
+	std::string configfile=
+		x::configdir("uigenerator2@examples.w.libcxx.com")
+		+ "/windows";
+
+	x::w::main_window_config config;
+
+	auto pos=x::w::screen_positions::create(configfile);
+
+	config.restore(pos, "main");
+
 	auto close_flag=close_flag_ref::create();
 
 	x::w::progressbarptr progressbar;
 	x::w::labelptr progressbar_label;
 
 	auto main_window=x::w::main_window
-		::create([&]
+		::create(config,
+			 [&]
 			 (const auto &main_window)
 			 {
 				 std::tie(progressbar, progressbar_label)=
-					 create_main_window(main_window);
+					 create_main_window(main_window, pos);
 			 },
 
 			 x::w::new_gridlayoutmanager{});
@@ -112,6 +171,9 @@ void uigenerator2()
 		lock.wait_for(std::chrono::milliseconds(500),
 			      [&] { return *lock; });
 	} while (!*lock);
+
+	main_window->save(pos);
+	pos->save(configfile);
 }
 
 int main(int argc, char **argv)
